--- a/viajesch/assets/css/style.css
+++ b/viajesch/assets/css/style.css
@@ -10,6 +10,7 @@
     padding-left: 15%;
   }
 
+  
   /*estilos carrusel init*/
   #imagescar{
     margin-top: -100px;
@@ -29,6 +30,7 @@
   }
   #ColorFondo {
     background-color: black ;
+
    }
 
    #cont1  {
@@ -67,9 +69,19 @@
     #final { 
       display: wrapper;
       padding-top: 10px ;
-      
+
       background-color: #1e99af;
       justify-content: center;
    
     }
-   
+
+
+    .tooltip {
+      display: none;
+      position: absolute;
+      background-color: #333;
+      color: #fff;
+      padding: 5px;
+      border-radius: 5px;
+      font-size: 12px;
+      z-index: 1000;}
